HMSS-92: Add unit tests setup to backend (#3)
* HMSS-92: App test setup

* HMSS-92: Patient initial tests
