# health_monitoring_system_app/resources/patients_resource.py
@@ -2,7 +2,7 @@ from flask import jsonify, Blueprint
 from webargs.flaskparser import use_args
 
 from health_monitoring_system_app.errors.validators import validate_json_content_type
-from health_monitoring_system_app.models.patient import patient_schema
+from health_monitoring_system_app.models.patient import patient_schema, patient_with_required_id_schema
 from health_monitoring_system_app.services.patient_service import PatientsService
 
 patients_blueprint = Blueprint('patients_view', __name__, url_prefix='/api')
@@ -31,7 +31,7 @@ def create_patient(args: dict):
 
 @patients_blueprint.route('/patients', methods=['PUT'])
 @validate_json_content_type
-@use_args(patient_schema, error_status_code=400)
+@use_args(patient_with_required_id_schema, error_status_code=400)
 def update_patient(args: dict):
     patient = PatientsService.update_patient(args)
     return jsonify({
@@ -53,6 +53,3 @@ def delete_patient_by_id(patient_id: int):
     return jsonify({
         'success': True,
         'message': f'Patient with id {patient_id} deleted.'}), 200
-
-
-
